Fix: vertical scrollbar also customized using height

--- a/gitin/static/css/githubrepo_detail.css
+++ b/gitin/static/css/githubrepo_detail.css
@@ -1,5 +1,5 @@
 .main-container {
-  height: 89vh;
+  height: 85vh;
 }
 
 .main-row {
